--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack serve --config ./src/client/webpack.dev.js"
+  },
   "devDependencies": {
     "@types/three": "^0.162.0",
-    "three": "^0.162.0"
+    "three": "^0.162.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
